# featback

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  codebase_dump.txt  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yml  terraform.yml
Architecture/: featback.drawio
airflow/dags/: main_dag.py
dags/: main_dag.py
infra/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
scripts/: configuration.py  data_processing.py  llm_utils.py  product_sentiment_analysis_main.py  reddit_ingestion.py  redshift_utils.py  s3_utils.py
src/featback/: __init__.py  config.py  logging.py
src/featback/io/: __init__.py  s3.py  warehouse.py
src/featback/llm/: __init__.py  openai_extractor.py
src/featback/pipeline/: __init__.py  data_processing.py  product_feedback.py
src/featback/quality/: __init__.py  expectations.py
src/featback/reddit/: __init__.py  ingestion.py
src/featback/services/: __init__.py
src/featback/services/api/: __init__.py  app.py  requirements.txt
src/featback/utils/: __init__.py  dates.py  text.py
tests/: __init__.py
tests/integration/: conftest.py  test_pipeline_minio.py
tests/unit/: test_openai_extractor.py  test_quality.py  test_s3.py
