[project]
name = "featback"
version = "2.0.0"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "pydantic-settings>=2.4",
  "boto3>=1.34",
  "botocore>=1.34",
  "praw>=7.7",
  "openai>=1.40",
  "pandera>=0.19",
  "pyarrow>=17.0",
  "redshift-connector>=2.0",
  "fastapi>=0.112",
  "uvicorn>=0.30",
  "mlflow>=2.14",
  "scikit-learn>=1.5",
  "python-dotenv>=1.0",
  "structlog>=24.1",
]
[project.optional-dependencies]
dev = ["pytest","pytest-cov","moto[boto3]","requests","ruff","black","isort","mypy","bandit","types-requests","types-PyYAML"]
[tool.black]
line-length = 100
[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
